add form tache and form connexion but not work

--- a/public/css/interne/interne.css
+++ b/public/css/interne/interne.css
@@ -26,11 +26,13 @@ body{
 }
 .inline{
 	display: inline !important;
-	
 }
 .width-s{
 	max-width:30px;
 }
 .btn-sm{
 	width: 10px !important;
+}
+.inline-block{
+	display: inline-block !important;
 }
