--- a/templates/tache/new.html.twig
+++ b/templates/tache/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Tache{% endblock %}
+{% block title %}Nouvelle tâche{% endblock %}
 
 {% block body %}
-    <h1>Create new Tache</h1>
+<a  href="{{ path('client_show',{'id': client.id}) }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+    <h1>Ajouter une nouvelle tâche</h1>
 
     {{ include('tache/_form.html.twig') }}
 
-    <a href="{{ path('tache_index') }}">back to list</a>
 {% endblock %}
