--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modifier un membre{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
+<a  href="{{ path('user_show', {'id': user.id}) }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+    <h1>Modifier un membre</h1>
+    <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
+        {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+        
+    </div>
 {% endblock %}
