--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,39 +1,44 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Membres{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h1>Membres</h1>
 
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
+            <tr  class='table_head'>
+                <th></th>
                 <th>Login</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.login }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
+            {% if user.login is not empty %}
+             {% set counter = ( counter | default(0) ) + 1 %}
+                {% if counter % 2 %}
+                    <tr class='tr_no_color select'>
+                {% else %}
+                    <tr class='tr_color  select'>
+                {% endif %}
+                    <td></td>
+                    <td>{{ user.login }}</td>
+                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                    <td>
+                    <a class="btn btn-success" href="{{ path('user_show', {'id': user.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                    {{ include('user/_delete_form.html.twig') }}
+                    </td>
+                </tr>
+            {% endif %}
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Aucun Utilisateur</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
+    <a  class="btn btn-success" href="{{ path('user_new') }}"><img class="new" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
 
-    <a href="{{ path('user_new') }}">Create new</a>
 {% endblock %}
