--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
+<a  href="{{ path('user_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+    <h1>Créer un nouveau membres</h1>
+    <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
+        {{ include('user/_form.html.twig') }}
+    </div>
 {% endblock %}
