--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,8 +2,14 @@
     font-weight: bold !important;
 }
 td {
-    font-weight: 500 !important;
+    font-weight: 600 !important;
 } 
 .center{
     text-align:center !important;
+}
+.right{
+    float: right !important;
+}
+.white{
+    color: white !important;
 }
