--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 /*interne*/
-@import url("interne/interne.css");
+@import url("interne/index.css");
 	/*client*/
 		/*show*/
 		@import url("interne/client/show.css");
@@ -8,5 +8,8 @@
 		@import url("interne/user/show.css");
 /*public*/
 @import url("public/index.css");
+	/*base*/
+	@import url("public/loader.css");
 /*base*/
-@import url("./base.css");
+@import url("base.css");
+
