--- a/templates/client/edit.html.twig
+++ b/templates/client/edit.html.twig
@@ -3,11 +3,15 @@
 {% block title %}Edit Client{% endblock %}
 
 {% block body %}
- <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-    <h1 style="margin-top: 45px !important;">Modifier</h1>
-       
-   <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
-        {{ include('client/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
-        {#{ include('client/_delete_form.html.twig') }#}
+    {% include 'layout/navbar.html.twig' %}
+    <div class="container-fluid mb-100">
+        <a  href="{{ path('client_show', { 'id': client.id }) }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+            <h1 style="margin-top: 45px !important;">Modifier</h1>
+            
+        <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
+                {{ include('client/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+                {#{ include('client/_delete_form.html.twig') }#}
+            </div>
     </div>
+    {% include 'layout/footer.html.twig' %}
 {% endblock %}
