--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -3,70 +3,75 @@
 {% block title %}Clients{% endblock %}
 
 {% block body %}
-    <h1 class='title_client'>Clients</h1>
+    {% include 'layout/navbar.html.twig' %}
+  
 
-    <table class="table">
-        <thead>
-            <tr class='table_head'>
-                <th>Date</th>
-                <th>Personne</th>
-                <th>Nom</th>
-                <th>Prenom</th>
-                <th>Télephone</th>
-                <th>Marque</th>
-                <th>Modele</th>
-                <th>Numero de serie</th>
-                <th>Mot de passe</th>
-                <th>Chargeur</th>
-                <th>Etat</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-       
-        {% for client in clients | sort((a, b) => b.date <=> a.date) %}
-            {% set counter = ( counter | default(0) ) + 1 %}
-            {% if counter % 2 %}
-                <tr class='tr_no_color select'>
-            {% else %}
-                 <tr class='tr_color  select'>
-            {% endif %}
-                <td>{{ client.date|date('d-m-Y H:i:s ') }}</td>
-                <td>{{ client.personne }}</td>
-                <td>{{ client.nom }}</td>
-                <td>{{ client.prenom }}</td>
-                <td>{{ client.tel }} </td>
-                <td>{{ client.appareil.marque }} </td>
-                <td>{{ client.appareil.modele }} </td>
-                <td>{{ client.appareil.ns }} </td>
-                <td>{{ client.appareil.mdp }} </td>
-                {% if client.appareil.chargeur == 1 %}
-                   <td> <img  class='check' src="{{asset('/images/check.png')}}"/></td>
+        <div class="container mb-100">
+            <h1>Clients {{titleMonth}} {{year}}</h1>
+            <a  class="btn btn-outline-dark" href="{{ path('client_index',{'month': month, 'year':year, 'method' : 'precedent' }) }}"><img class="precedent" width='25px' src="{{asset('/images/icon-precedent.png')}}"/></a>
+            <a  class="btn btn-outline-dark float-end" href="{{ path('client_index',{'month': month, 'year':year, 'method' : 'suivant' }) }}"><img class="suivant" width='25px' src="{{asset('/images/icon-suivant.png')}}"/></a>
+            <table class="table">
+                <thead>
+                    <tr class='table_head'>
+                        <th>Date</th>
+                        <th>Personne</th>
+                        <th>Nom</th>
+                        <th>Prenom</th>
+                        <th>Télephone</th>
+                        <th>Marque</th>
+                        <th>Modele</th>
+                        <th>Numero de serie</th>
+                        <th>Mot de passe</th>
+                        <th>Chargeur</th>
+                        <th>Etat</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+            
+                {% for client in clients | sort((a, b) => b.date <=> a.date) %}
+                    {% set counter = ( counter | default(0) ) + 1 %}
+                    {% if counter % 2 %}
+                        <tr class='tr_no_color select'>
+                    {% else %}
+                        <tr class='tr_color  select'>
+                    {% endif %}
+                        <td>{{ client.date|date('d-m-Y H:i:s ') }}</td>
+                        <td>{{ client.personne }}</td>
+                        <td>{{ client.nom }}</td>
+                        <td>{{ client.prenom }}</td>
+                        <td>{{ client.tel }} </td>
+                        <td>{{ client.appareil.marque }} </td>
+                        <td>{{ client.appareil.modele }} </td>
+                        <td>{{ client.appareil.ns }} </td>
+                        <td>{{ client.appareil.mdp }} </td>
+                        {% if client.appareil.chargeur == 1 %}
+                        <td> <img  class='check' src="{{asset('/images/check.png')}}"/></td>
+                        {% else %}
+                        <td>  <img  class='cross' src="{{asset('/images/cross.png')}}"/></td>
+                        {% endif %}
+                        {% if client.appareil.editeur.etat.statut is defined %}
+                        <td>{{ client.appareil.editeur.etat.statut}}</td>
+                        {% else %}
+                        <td>  </td>
+                        {% endif %}
+                        <td>
+                            <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
+                            <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a></br>
+                            <a class="btn btn-info"href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
+                            {{ include('client/_delete_form.html.twig') }}
+                        </td>
+                    </tr>
                 {% else %}
-                  <td>  <img  class='cross' src="{{asset('/images/cross.png')}}"/></td>
-                {% endif %}
-                {% if client.appareil.editeur.etat.statut is defined %}
-                   <td>{{ client.appareil.editeur.etat.statut}}</td>
-                {% else %}
-                  <td>  </td>
-                {% endif %}
-                
+                    <tr>
+                        <td colspan="12" class='white'>En attente de clients...</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
+        </div>
 
-                <td>
-                    <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
-                    <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-                     <a class="btn btn-info"href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
-                    {{ include('client/_delete_form.html.twig') }}
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="11">no records found</td>
-            </tr>
-             {% endfor %}
-        </tbody>
-    </table>
-
-    <a  class="btn btn-success" href="{{ path('client_new') }}"><img class="delete" width='28px' src="{{asset('/images/icon-add.png')}}"/></a>
-
+    
+    {% include 'layout/footer.html.twig' %}
 {% endblock %}
