--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -3,17 +3,10 @@
 {% block title %}Informations client{% endblock %}
 
 {% block body %}
- <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-
-    <h1 class='title_client' style="margin-top: 45px !important;" >Informations client</h1>
-    
-    <div style="padding-bottom: 80px !important; text-align:center" class="btns">
-        <a class="btn btn-primary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-        <a class="btn btn-dark" href="{{ path('tache_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-add-entretien.png')}}"/></a>
-        {{ include('client/_delete_form.html.twig') }}
-       
-        
-    </div>
+{% include 'layout/navbar.html.twig' %}
+<div class="container-fluid mb-100"> 
+    <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+    <h1 style="margin-top: 45px !important;" >Informations client</h1>
 
     <div style="text-align:center">
         <table class="table inline" >
@@ -100,37 +93,37 @@
             </tbody>
         </table>
         
-            <table class="table inline"  >
-                <thead>
-                    <tr class='table_head thead_dark_green '>
-                        <th style="text-align:center" colspan='2' > <img  class='pc-icon' src="{{asset('/images/icon-statut.png')}}"/> Statut</th>
-                    </tr>
-                </thead>
+        <table class="table inline"  >
+            <thead>
+            <tr class='table_head thead_dark_green '>
+                <th style="text-align:center" colspan='2' > <img  class='pc-icon' src="{{asset('/images/icon-statut.png')}}"/> Statut</th>
+            </tr>
+            </thead>
                 <tbody class='etat'>
-                    <tr class='tr_no_color select'>
-                        <th>Date</th>
-                        {% if editeur.date is defined %}
-                            <td>{{ editeur.date|date('d-m-Y H:i:s ') }}</td>
-                        {% else %}
-                            <td> Non définie </td>
-                         {% endif %}
-                    </tr>
-                    <tr class='tr_color select'>
-                        <th>Etat</th>
-                        {% if (etat.statut is defined) and (etat.statut is not empty) %}
-                            <td>{{ etat.statut }}</td>
-                        {% else %}
-                            <td> Non définie </td>
-                         {% endif %}
-                    </tr>
-                    <tr class='tr_no_color select'>
-                        <th>Editeur</th>
-                        {% if (user.id is defined) and (user.login is not empty)  %}
-                            <td>{{ user.login }}</td>
-                        {% else %}
-                            <td> Non définie </td>
-                         {% endif %}
-                    </tr>
+                <tr class='tr_no_color select'>
+                    <th>Date</th>
+                    {% if editeur.date is defined %}
+                        <td>{{ editeur.date|date('d-m-Y H:i:s ') }}</td>
+                    {% else %}
+                         <td> Non définie </td>
+                    {% endif %}
+                </tr>
+                <tr class='tr_color select'>
+                    <th>Etat</th>
+                    {% if (etat.statut is defined) and (etat.statut is not empty) %}
+                        <td>{{ etat.statut }}</td>
+                    {% else %}
+                        <td> Non définie </td>
+                        {% endif %}
+                </tr>
+                <tr class='tr_no_color select'>
+                    <th>Editeur</th>
+                    {% if (user.id is defined) and (user.login is not empty)  %}
+                        <td>{{ user.login }}</td>
+                    {% else %}
+                        <td> Non définie </td>
+                        {% endif %}
+                </tr>
                 </tbody>
 
                 <thead>
@@ -191,23 +184,27 @@
                     </tbody>
                     {% endfor %}
                 {% else %}
-                    <tbody class='tache' style=' border-color:black;'>
-                        <tr class='tr_no_color select'>
+                <tbody class='tache' style=' border-color:black;'>
+                        <tr class='tr_color select'>
                             <th></th>
                             <td>En attente d'ajout de tache...</td>
                         </tr>
+                        
                     </tbody>
+                   
                 {% endif %}
             </table>
-         
-       
-
 
     </div>
-    <footer style='padding-top: 80px'>
-    </footer>
+    <div style="padding-top: 80px !important; text-align:center" class="btns">
+        <a class="btn btn-primary" href="{{ path('prioritaire_new', {'id': appareil.id}) }}">Mettre prioritaire</a>
+        <a class="btn btn-primary" href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
+        <a class="btn btn-dark" href="{{ path('tache_new', {'id': appareil.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-add-entretien.png')}}"/></a>
+        {{ include('client/_delete_form.html.twig') }}
+    </div>
+    
+    </div>
 
-
-
+{% include 'layout/footer.html.twig' %}
 
 {% endblock %}
