--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,35 +3,46 @@
 {% block title %}Membre{% endblock %}
 
 {% block body %}
-<a  href="{{ path('user_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-    <h1>Profil du membre</h1>
-    <div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
-        <img class='check' style="width: 10%; margin : auto; " src="{{asset('/images/icon-membre.gif')}}"/>
-        <table class="table">
-            <tbody>
-                <tr class='select profil'>
-                    <th>Login</th>
-                    <td>{{ user.login }}</td>
-                </tr>
-                <tr class='select profil'>
-                    <th>Roles</th>
-                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                </tr>
-                <tr class='select profil'>
-                    <th>Password</th>
-                    <td>{{ user.password }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div style="padding-top: 50px !important; text-align:center" class="btns">
-            <a class="btn btn-primary" href="{{ path('user_edit', {'id': user.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
-        
-            {{ include('user/_delete_form.html.twig') }}
-        
+    {% include 'layout/navbar.html.twig' %}
+    <div class="container-fluid mb-100">
+        {% if is_granted('ROLE_ADMIN') %}
+        <a  href="{{ path('user_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+        {% else %}
+            <a  href="{{ path('client_index') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
+        {% endif %}
+        <h1 style="margin-top: 45px !important;">Profil</h1>
+        <div class="card" style="width: 45%; margin:auto; padding : 30px;">
+            <img class='check' style="width: 15%; margin : auto; " src="{{asset('/images/icon-membre.gif')}}"/>
+            <table class="table">
+                <tbody>
+                    <tr class='select profil'>
+                        <th>Login</th>
+                        <td>{{ user.login }}</td>
+                    </tr>
+                    <tr class='select profil'>
+                        <th>Role</th>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <td>Admin</td>
+                        {% else %}
+                            </td>Membre</td>
+                        {% endif %}
+                    </tr>
+                    <tr class='select profil'>
+                        <th>Password</th>
+                        <td>*********</td>
+                    </tr>
+                </tbody>
+            </table>
+            <div style="padding-top: 50px !important; text-align:center" class="btns">
+                <a class="btn btn-primary" href="{{ path('user_edit', {'id': user.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
             
+                {{ include('user/_delete_form.html.twig') }}
+            
+                
+            </div>
         </div>
     </div>
 
 
-   
+   {% include 'layout/footer.html.twig' %}
 {% endblock %}
