--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -24,7 +24,7 @@
                         <th>Mot de passe</th>
                         <th>Chargeur</th>
                         <th>Etat</th>
-                        <th>Actions</th>
+                        <th style="width:180px !important;">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -55,9 +55,9 @@
                         {% else %}
                         <td>  </td>
                         {% endif %}
-                        <td>
+                        <td class="td-button">
                             <a class="btn btn-success"href="{{ path('client_show', {'id': client.id}) }}"><img class="show" width='25px' src="{{asset('/images/icon-afficher.png')}}"/></a>
-                            <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a></br>
+                            <a class="btn btn-secondary"href="{{ path('client_edit', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-edit.png')}}"/></a>
                             <a class="btn btn-info"href="{{ path('client_clone', {'id': client.id}) }}"><img class="edit" width='25px' src="{{asset('/images/icon-cloner.png')}}"/></a>
                             {{ include('client/_delete_form.html.twig') }}
                         </td>
