--- a/templates/prioritaire/_delete_form.html.twig
+++ b/templates/prioritaire/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('prioritaire_delete', {'id': prioritaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class='inline' action="{{ path('prioritaire_delete', {'id': prioritaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ prioritaire.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-warning"><img class="delete" src="{{asset('/images/icon-moins.png')}}"/></button>
 </form>
