--- a/templates/depot/index.html.twig
+++ b/templates/depot/index.html.twig
@@ -7,10 +7,11 @@
 {% block body %}
 	<div class="container-fluid mb-100">
 		<a  href="{{ relative_path('http://azertyfrance.fr') }}"> <img class="retour" src="{{asset('/images/retour.png')}}"/> </a>
-		<h1>Formulaire de dépôt d’appareils informatiques</h1>
+		<img class="img-center" src="{{asset('/images/azertylogo.png')}}"/>
+		<h1 class="mt-3">Formulaire de dépôt d’appareils informatiques</h1>
 		<div class="card" style="width: 60%; margin:auto;margin-bottom:150px; padding : 30px;">
 			
-		{{ form_start(form,{ 'attr': { 'class' : 'form-material form cacher' } })}}
+		{{ form_start(form,{ 'attr': { 'class' : 'form-material form cacher ' } })}}
 		<h2>Informations clients</h2>
 			<div class="form-group">
 				{% for child in form.client.personne %}
@@ -26,7 +27,7 @@
 
 			<div class="grix xs1 sm2">
 				<div class="form-field">
-					{{form_widget(form.client.nom , { 'attr': { 'class' : 'form-control rounded-1 required', 'id':'nom' } })}}
+					{{form_widget(form.client.nom , { 'attr': { 'class' : 'form-control rounded-1 required ', 'id':'nom' } })}}
 					<label for="nom">Nom</label>
 				</div>
 				<div class="form-field ">
@@ -100,11 +101,11 @@
 				<div class="form-check">
 
 					{{form_widget(form.cu)}}
-					{{form_label(form.cu,null,{ 'label': 'Accepter les conditions de prise en charge ','attr': {  'class' : 'form-control rounded-1 cu required'} })}}
-
+					 {{form_label(form.cu,null,{ 'attr': {  'class' : 'form-control rounded-1 cu required'} })}}
+				 
 				</div>
 			</div>
-			<div class="mb-3 text-center">
+			<div class="mb-3 mt-5 text-center">
 				<button type="submit" class="btn btn-dark btn-depot submit" >Valider</button>
 			</div>
 			
